--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "rpcode",
   "displayName": "RPCode",
   "description": "Gameify coding for vscode users!",
-  "version": "0.0.1",
+  "publisher": "acaulkin",
+  "version": "0.5.0",
   "engines": {
     "vscode": "^1.51.0"
   },
